# crypto-trading-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily_trading.yml  monthly_optimize.yml  retrain_weekly.yml
deploy/: run_bot.sh  run_dashboard.sh  setup_oracle.sh
scripts/: auto_optimize.py  backtest_dca.py  backtest_dca_multi.py  backtest_dca_per_coin.py  backtest_momentum.py  backtest_momentum_multi.py  backtest_prediction.py  test_real_trade.py
src/: config.py  main.py
src/allocation/: allocator.py
src/dashboard/: app.py
src/dashboard/templates/: base.html  dca.html  home.html
src/data/: binance_client.py  features.py
src/execution/: executor.py
src/market/: regime.py
src/model/: predictor.py
src/notifications/: email_report.py
src/portfolio/: manager.py
src/strategies/: dca.py  momentum.py  prediction_book.py
src/utils/: logger.py
tests/: test_executor.py  test_features.py  test_portfolio_manager.py  test_predictor.py
